--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -2,9 +2,14 @@
 
 #### How to begin a CSS file and link it to your HTML file.
 
-This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  First, copy your index.html file into a new html file in your week 2 homework folder.
+This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  
 
-To style our webpage, we must link a css file to our HTML file.  To do this, add a `link` tag inside the head of your html file. This tag should have the `rel` attribute set to `"stylesheet"` and the `href` attribute set to `"style.css"`.
+- Copy your index.html file into a new html file in your week 2 homework folder.
+
+To style our webpage, we must link a css file to our HTML file.  
+
+- Add a `link` tag inside the head of your html file
+  - Set the `rel` attribute to `"stylesheet"` and the `href` attribute to `"style.css"`.
 
 Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
 
