--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -2,7 +2,15 @@
 
 #### In this task, we'll go over how to style the text in your body tag.
 
-In your CSS file, define a body class and set the display to flex.  This will make sure all elements fit the screen appropriately. Next, use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
+In your CSS file:
+
+- Define a body selector (`.body{}`) 
+- Set the `display` to `flex`  
+
+This will make sure all elements fit the screen appropriately. 
+
+- Use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. 
+- You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
 
 Inside the body, you can also change the color of the background, as well as the color, font, and size of your text.  I recommend using the `font-family` attribute with a few backup fonts in case your browser doesn't support your font of choice.  You can add back up fonts by following your font with a comma and another font family or type. My font-family line looks like this:
 
