--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -2,13 +2,18 @@
 
 #### For the third task, we're going to begin designing a digital clock using some basic styling techniques.
 
-After you're satisfied with the body of your page, define a block that styles elements in the `clock` class.
+After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class.
 
 ![Screen Shot 2021-01-15 at 5.49.29 PM](../../images/Screen Shot 2021-01-15 at 5.49.29 PM.png)
 
-First, set a width and a height for the box that's going to hold your time.  Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
+- Set a width and a height for the box that's going to hold your time  
+- Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
+  - Use the `background-color` and `border` attributes for these items respectively
 
-Once again, you'll want to set your `display` to `flex` and center your text using `align-items` and `justify-content` .  You need to do this again because these attributes in the body only centered the box on your page; repeating these lines in the clock section will center your text within the box.
+- Set your `display` to `flex` 
+- Center your text using `align-items` and `justify-content` 
+
+You need to do this again because these attributes in the body only centered the box on your page; repeating the two bullets above in the clock section will center your text within the box.
 
 You may also want to adjust the margins of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
 
