--- a/Javascript/homework/responses/3.2-clock-styling.md
+++ b/Javascript/homework/responses/3.2-clock-styling.md
@@ -4,17 +4,25 @@
 
 Inside of your HTML file, make sure you have a div with its class set to `"clock"`.  This div should be defined after your form ends, but still inside the body tags.
 
-Once you've established your clock div, move to your `style.css` file and define a block for `.clock`.  This will affect all elements with class = "clock"; therefore, the div we just defined.
+Once you've established your clock div, move to your `style.css` file and define a selector for your clock class (`.clock`).  This will affect all elements with class = "clock"; therefore, the div we just defined.
 
-First, you'll want to set the height and width - it doesn't matter what you set them to, as long as they are the same value.  I set my height and width to both be 300px.  You'll also want to set a background color for your clock that differs from the background of the screen so that the clock is visible.
+- Set the height and width
+  - It doesn't matter what you set them to, as long as they are the same value.  
+  - I set my height and width to both be 300px.  
+
+- Set a background color for your clock 
+  - Make sure it differs from the background of the screen so that the clock is visible
 
 If you load your HTML at this point, it should look something like this (give or take depending on what you've set your attributes to):
 
 ![Screen Shot 2021-01-16 at 1.01.26 AM](../../images/Screen Shot 2021-01-16 at 1.01.26 AM.png)
 
-Since we want our clock to be round, we'll set the `border-radius` in the `.clock` section to 50% - this will completely round the edges of the square, thus making it a circle. You may also want to add a border to the clock to make it look more familiar.
+- Set the `border-radius` in the `.clock` section to 50% 
+  - This will completely round the edges of the square, thus making it a circle. 
+- Add a border - I suggest solid black
 
-Lastly, be sure to set the position of the items in this class to relative.  This will help us glue together the elements we're going to place on top of the clock.
+- Set the position of the items in this class to relative
+  - This will help us glue together the elements we're going to place on top of the clock.
 
 Next, use the after selector on your clock class to define a new block like so:
 
@@ -22,11 +30,17 @@ Next, use the after selector on your clock class to define a new block like so:
 
 This will create a new element associated with the clock class that we're going to use to design a small button that will sit in the middle of the clock, on top of where the hands are going to overlap..
 
-First, set the position to absolute so that this element is anchored to the circle we have on the page. Next, set content to `''` - this will make sure nothing is printed inside this small block.
+- Set the position to absolute 
+  - This ensures the element is anchored to the circle we have on the page
+- Set `content` to `''` 
+  - This will make sure nothing is printed inside this small block
 
 You'll also want to set the height and width to be a small square - I've set mine to 20px - and change the border-radius to 50%, just as we did with the base of the clock, to make it a circle.
 
-Next, set the top to 50% and the left to 50% to move the small circle to the center of the clock. 
+- Set `top` to 50% 
+- Set `left` to 50%  
+
+These two steps move the small circle to the center of the clock. 
 
 If you load your page now, you'll notice that the small circle is slightly off center:![Screen Shot 2021-01-16 at 1.59.41 AM](../../images/Screen Shot 2021-01-16 at 1.59.41 AM.png)
 
