--- a/Javascript/homework/responses/3.3-clock-digits.md
+++ b/Javascript/homework/responses/3.3-clock-digits.md
@@ -2,19 +2,29 @@
 
 #### We'll use HTML and CSS in this step to print numbers on your clock and get them ready for positioning.
 
-Next, we need to set up the numbers on our clock. Go back to the HTML document and define divs for numbers 1-12 inside the clock div tags. Name the classes for these divs "number number[digit]" so for the first digit, the tag would look like: 
+Next, we need to set up the numbers on our clock. 
 
-`<div class="number number1">1</div>`
+- Go back to the HTML document and define divs for numbers 1-12 inside the clock div tags. 
+  - Name the classes for these divs "number number[digit]" so for the first digit, the tag would look like: 
 
-Repeat this for numbers 2-12.
+    ​		`<div class="number number1">1</div>`
 
-Next, open up your `style.css` file and define a block `.clock .number` - this will target all target all divs with a class starting with `"number"` within a div with a `"clock"` class, a.k.a. all of the divs we just made for our numbers on the clock.
+- Repeat this for numbers 2-12.
 
-Here, you'll want to customize the appearance of the numbers on your clock. Firstly, and most importantly, set the `position` to `absolute` so that the numbers are anchored to the clock.  Next, set the width and height to 100%. The method we're going to use to get the numbers in the correct position will involve us making a square around each number that we will later rotate.  Setting the height and width to 100% will ensure that this square is always the same size as the clock background.
+Next, open up your `style.css` file and define a selector `.clock .number` - this will target all target all divs with a class starting with `"number"` within a div with a `"clock"` class, a.k.a. all of the divs we just made for our numbers on the clock.
+
+Here, you'll want to customize the appearance of the numbers on your clock. 
+
+- Set the `position` to `absolute` so that the numbers are anchored to the clock.  
+- Set the `width` and `height` to 100%. 
+
+The method we're going to use to get the numbers in the correct position will involve us making a square around each number that we will later rotate.  Setting the height and width to 100% will ensure that this square is always the same size as the clock background.
 
 *Tip: You may want to add a border inside the `.clock .number` CSS section to help you better visualize what's going on in these next steps.*
 
-Set the `text-align` to `center` so that the numbers stay centered at the top of the clock, no matter the clock's size. You may also want to change the font family or size here, as well as the text color.
+- Set the `text-align` to `center` 
+
+Now, the numbers will stay centered at the top of the clock, no matter the clock's size. You may also want to change the font family or size here, as well as the text color.
 
 At this point your clock should look something like this:
 
