--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -2,7 +2,10 @@
 
 #### Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock. This task will demonstrate a different approach to radio buttons.
 
-First, open another form tag directly below the one you have for the timezone selector.  Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") and insert 2 radio buttons. Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
+- Open another form tag directly below the one you have for the timezone selector.  
+- Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") 
+- Insert 2 radio buttons. 
+  - Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
 
 These two radio buttons should have the user input whether they'd like to see the time on a digital clock or an analog clock.  There's no need to add a submit button as we will set up our page to change on the click of the radio button rather than on the submit button.
 
