--- a/Javascript/homework/responses/4.3-more-js-functions.md
+++ b/Javascript/homework/responses/4.3-more-js-functions.md
@@ -2,21 +2,37 @@
 
 #### Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says! This task will go over some JavaScript functions using methods you've learned previously.
 
-In your JavaScript file, define two functions - one called `setDigital()` and another called `setAnalog()` .  Inside of each of these functions, use `document.getElementById()` to define 2 variables that select the analog clock and the digital clock.  So, your code for the digital clock would look like this:
+In your JavaScript file, 
 
-`var digital = document.getElementById("digital clock")` 
+- Define two functions - one called `setDigital()` and another called `setAnalog()` .  
+- Inside of each of these functions, 
+  - Use `document.getElementById()` to define 2 variables that select the analog clock and the digital clock.  
+  - So, your code for the digital clock would look like this: `var digital = document.getElementById("digital clock")` because my digital clock data is linked to a div tag with `id="digital clock"`.  
 
-because my digital clock data is linked to a div tag with `id="digital clock"`.  Now, do the same thing for a variable that holds your analog clock data (if you copied your code from week 3, the id for your analog clock should be `"clock"`).
+- Do the same thing for a variable that holds your analog clock data 
+  - If you copied your code from week 3, the id for your analog clock should be `"clock"`.
 
-Next, we're going to use these variables to change their display so that only one will be shown at a time.  In `setAnalog()`, set `analog.style.display` to `"flex"` so the code should look like:
+Next, we're going to use these variables to change their display so that only one will be shown at a time.  
 
-`analog.style.display = "flex"`
+- In `setAnalog()`, set `analog.style.display` to `"flex"` so the code should look like this: `analog.style.display = "flex"`
 
-Similarly, set the digital clock object's display to `"none"`.  This code will override the current CSS display settings to hide the digital clock and hide the analog clock.
+- Set the digital clock object's display to `"none"`.  
+  - This code will override the current CSS display settings to hide the digital clock and hide the analog clock.
 
 Use the same methodology to hide the analog clock and show the digital clock in your `setDigital()` function.
 
-Finally, we just have to link these functions to the radio buttons.  Back in your HTML code, add the `onclick` attribute to both input fields.  In the input field for the analog clock, set this attribute to `"setAnalog()"` , and. by the same logic, set the digital clock button's `onclick` attribute to `"setDigital()"`.  This is the same way we linked a function to the submit button, so feel free to refer to that code for help.
+Finally, we just have to link these functions to the radio buttons.  
+
+Back in your HTML code, 
+
+- Add the `onclick` attribute to both input fields.  
+
+In the input field for the analog clock, 
+
+- Set `onclick` to `"setAnalog()"` 
+- Set the digital clock button's `onclick` attribute to `"setDigital()"`.  
+
+This is the same way we linked a function to the submit button, so feel free to refer to that code for help.
 
 Now, if you click the "Analog" button, your screen should look like this:
 
