--- a/Slack-Apps/homework/responses/4.2-webhooks.md
+++ b/Slack-Apps/homework/responses/4.2-webhooks.md
@@ -28,5 +28,9 @@ Next, start your Slack app and create an ExpressReceiver object. Follow these st
 4. Copy and paste the secret value you create into the 'Secret' field. 
 5. Lastly, select individual events and choose 'starred', then press 'update'.  Check the ngrok server in your terminal to see if the webhook connected successfully.
 
+**After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
+
+**REMINDER: If you are part of the MENTORED group, after you complete all steps within a certain week and followed the instructions above, create a `Pull Request` with your work from `week(x)` to `master` and assign your mentor as a reviewer. If you are an open-source user, do the same but self-review your PR to continue to the next week.**
+
 
 
