--- a/Slack-Apps/homework/responses/1.0-blog.md
+++ b/Slack-Apps/homework/responses/1.0-blog.md
@@ -1,4 +1,6 @@
-# Week 1 Livestream
+## Written Blog on Livestream
+
+#### Written blog on the Week 1 Livestream if you missed it.
 
 Welcome to your first livestream of Bitcamp Slack! In week 1, we are going to be going over the basics of navigating the Slack API, using the Bolt Framework, and setting up a coding environment for NodeJS.
 
@@ -71,6 +73,10 @@ Congrats! You now have a working IDE and are ready to create your first Slack Ap
 Mentors will livestream themselves creating a Slack App for the students to understand the different components of creating one. If you want to follow along, the tutorial is posted here: https://slack.dev/bolt-js/tutorial/getting-started.
 
 ### 🎉 That's the Week 1 Livestream! Reach out to your mentors if you're having trouble.
+
+**After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
+
+**REMINDER: If you are part of the MENTORED group, after you complete all steps within a certain week and followed the instructions above, create a `Pull Request` with your work from `week(x)` to `master` and assign your mentor as a reviewer. If you are an open-source user, do the same but self-review your PR to continue to the next week.**
 
 
 
