--- a/Slack-Apps/homework/responses/2.0-blog.md
+++ b/Slack-Apps/homework/responses/2.0-blog.md
@@ -1,4 +1,7 @@
-# Week 2 Livestream
+## Written Blog on Livestream
+
+#### Written blog on Week 2 Livestream if you missed it.
+
 
 During Week 1, you have learned how to work with the Slack API. This week, you will utilize the Slack API to create apps using shortcuts, modals, and Block Kit.
 
@@ -210,3 +213,7 @@ The last thing to do for this project is to add emoji options. Duplicate the fol
 
 
 Voila! Your polling app is complete. Feel free to reach out to your mentors for any help or guidance.
+
+**After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
+
+**REMINDER: If you are part of the MENTORED group, after you complete all steps within a certain week and followed the instructions above, create a `Pull Request` with your work from `week(x)` to `master` and assign your mentor as a reviewer. If you are an open-source user, do the same but self-review your PR to continue to the next week.**
