--- a/Slack-Apps/homework/responses/3.0-blog.md
+++ b/Slack-Apps/homework/responses/3.0-blog.md
@@ -1,6 +1,6 @@
 ## Written Blog on Livestream
 
-#### Written blog of Week 3 livestream if you missed it.
+#### Written blog of Week 3 Livestream if you missed it.
 
 During the week 2 livestream, you learned about Blockkit and modals. This week, you will be introduced to reaction event listeners and threads. This allows you to have your program react when an emoji reaction is added and have your Slack App respond within a given thread.
 
