--- a/Slack-Apps/homework/responses/4.0-blog.md
+++ b/Slack-Apps/homework/responses/4.0-blog.md
@@ -1,4 +1,6 @@
-# Week 4 Livestream
+## Written Blog on Livestream
+
+#### Written blog of Week 4 Livestream if you missed it.
 
 Last week, you learned how to work with third party APIs and respond in threads. This week is covers different similar topics.
 
@@ -149,6 +151,10 @@ await client.views.publish({
 
 
 And that is all of the content from your final livestream! Reach out to your mentors for any help or questions.
+
+**After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
+
+**REMINDER: If you are part of the MENTORED group, after you complete all steps within a certain week and followed the instructions above, create a `Pull Request` with your work from `week(x)` to `master` and assign your mentor as a reviewer. If you are an open-source user, do the same but self-review your PR to continue to the next week.**
 
 
 
