--- a/Slack-Apps/homework/responses/2.1-blocks-and-actions.md
+++ b/Slack-Apps/homework/responses/2.1-blocks-and-actions.md
@@ -2,6 +2,8 @@
 
 #### Introduction to BlockKits and Actions in the Slack API.
 
+**If you missed the livestream or are unable to view the recording, here is a link to a written copy: https://github.com/bitprj/BitCamp/blob/master/Slack-Apps/week2/blog.md**
+
 Block Kits are a more advanced way of sending messages through an app. In this issue, you will build an app that uses block kits. to interact with users. 
 
 
