--- a/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
+++ b/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
@@ -2,6 +2,8 @@
 
 #### Introduction to a new event listener and responding in threads.
 
+**If you missed the livestream or are unable to view the recording, here is a link to a written copy: https://github.com/bitprj/BitCamp/blob/master/Slack-Apps/week3/blog.md**
+
 During the livestream, you were introduced to two new concepts: a new event listener to emoji reactions and a new way of having your Slack App respond to a thread. In this issue, you will be incorportating these concepts as you integrate your Slack App with your first third party API, Google Translate!
 
 ## Event Listeners
