--- a/Slack-Apps/homework/responses/4.1-express.md
+++ b/Slack-Apps/homework/responses/4.1-express.md
@@ -2,6 +2,8 @@
 
 #### Learn about ExpressJS and what it can do.
 
+**If you missed the livestream or are unable to view the recording, here is a link to a written copy: https://github.com/bitprj/BitCamp/blob/master/Slack-Apps/week4/blog.md**
+
 This week will involve using a popular JavaScript framework called Express. Frameworks give you a fundamental structure that you can build on without starting completely from scratch. For example, Bolt is also a framework. 
 
 
