--- a/Serverless-Functions/homework/responses/2.5-callFaceFetch.md
+++ b/Serverless-Functions/homework/responses/2.5-callFaceFetch.md
@@ -26,13 +26,15 @@ Read through the [**API** section](https://www.npmjs.com/package/node-fetch#api)
 
 We're calling the `fetch` function - notice the **await** keyword, which we need because `fetch` returns a **Promise**, which is a proxy for a value that isn't currently known. You can read about Javascript promises [here](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise). 
 
-Javascript is a synchronous language, meaning that only one operation can happen at a time. However, in order to maximize efficiency (i.e. so you don't have to waste time) it allows develo
+Javascript is what we call a "synchronous" language, meaning operations in Javascript block other operations from executing until they are complete, creating a sense of single directional flow. This means that only one operation can happen at a time. However, in order to maximize efficiency (save time and resources), Javascript allows the use of asynchronous functions.
 
-Promises are objects that 
+Can you guess what this means?
 
-> [Read more](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)
+Simply put, async functions allow other operations to continue running as they are being executed [(read more)](https://dev.to/hardy613/asynchronous-vs-synchronous-programming-23ed). Promises are objects that 
 
-> [Read more](https://medium.com/better-programming/is-javascript-synchronous-or-asynchronous-what-the-hell-is-a-promise-7aa9dd8f3bfb)
+> [Is JavaScript Synchronous or Asynchronous? What the Hell is a Promise?](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)
+
+> [Master the JavaScript Interview: What is a Promise?](https://medium.com/better-programming/is-javascript-synchronous-or-asynchronous-what-the-hell-is-a-promise-7aa9dd8f3bfb)
 
 In the meantime, I've set the url for you- notice that it is just the uriBase with the params we specified earlier appended on.
 
