--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -10,7 +10,32 @@ Finally, let's integrate the functions we wrote to produce a clock that changes 
 Now, scroll down to the function you wrote to find the selected timezone. 
 
 - Using either conditionals or a switch statement, change the offset based on the timezone selected.  
+  
   - For example, if your computer is set to eastern standard time and the user selected pacific standard time, then you would set the offset to 3.
+  
+  - Using conditionals, you would just have a series of `if`  and `else if` statements that would check if your timezone variable is equal to a string that represents the `value` of each input field.  If the condition is satisfied, the offset would be assigned a new value
+  
+  - You could also use a switch statement which would look something like this if you lived in the pacific timezone:
+  
+    `switch(timezone):`
+  
+    ​	`	case "cst":`
+  
+    ​		`offset = 2;`
+  
+    ​		`break;`
+  
+    ​	`case "est":`
+  
+    ​		`offset = 3;`
+  
+    ​		`break;`
+  
+    ​	`default:`
+  
+    ​		`offset = 0;`
+  
+    ​		`break;`
 
 Once you've set up your conditionals, revisit your function that sets your clock.  
 
