--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -36,6 +36,10 @@ Whenever we want to take in some user input involving input fields and a submit 
 
 Finally, add a break and a `div` tag with a unique `id` right below the submit button, outside of the form tag.  We will use this later to print the selected timezone.
 
+By the end of this step, your page should look like this:
+
+![Screen Shot 2021-01-31 at 8.25.34 PM](../../images/Screen Shot 2021-01-31 at 8.25.34 PM.png)
+
 #### Open a pull request for your code
 
 Just as you did for the last task, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's second task (this assignment) would be `danzelo1-1-2`.
