--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -77,7 +77,9 @@ Finally, you'll want to scroll up to your submit button
   - This will let the computer know to call this function when the submit button is clicked.  
   - My function was named `ValidateForm` and my button tag looks like this:`<button type="button" value="Submit" onclick="ValidateForm()"> Submit </button>`
 
-Now, your page should print out the value of whichever item the user has selected when they click the submit button.
+Now, your page should print out the value of whichever item the user has selected when they click the submit button, like so:
+
+![Screen Shot 2021-01-31 at 8.29.18 PM](/Users/danielleanzelone/GitHub/BitCamp/Javascript/images/Screen Shot 2021-01-31 at 8.29.18 PM.png)
 
 #### Open a pull request for your code
 
