--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -43,6 +43,8 @@ Once you've set up your conditionals, revisit your function that sets your clock
 
 Finally, call the function that sets your clock at the end of your function that changes the timezone so that the time gets updated. Now, your clock should change when you select a timezone and hit submit.
 
+![week-1-final](/Users/danielleanzelone/GitHub/BitCamp/Javascript/images/Screen Shot 2021-01-31 at 8.31.52 PM.png)
+
 #### Open a pull request for your code
 
 Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's third task (this assignment) would be `danzelo1-1-3`.
