fixing images and adding code snippets

--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -20,11 +20,15 @@ However, the input field is special - because it isn't a tag, it doesn't need to
 
   - You can do this by assigning a unique value to the `id` property of your `input` field and then using the `label` tag like so:
 
-    `<label for "[id from input field]"> Put your text here </label>`
+    ```{html}
+  <label for "[id from input field]"> put your text here</label>
+    ```
 
   - You can also do this by simply putting your text outside of your `input` tag and adding a break(`<br>`) like this:
-
-    `<input type="radio" name="tz" value="est"> Eastern Standard Time <br>`
+  
+    ```{html}
+    <input type="radio" name="tz" value="est"> Eastern Standard Time <br>
+    ```
 
 Next, we need to add a submit button.  
 
