--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -12,11 +12,11 @@ Outside of the form, but still in the body, open the `script` tag with its `type
 
   - To define a function, type `function` followed by the name of your function, which must be unique and must be followed by parentheses and curly braces, like this:
 
-    `function readForm(){`
-
-    `\\the content of your function will go here`
-
-    `}`
+    ```{js}
+function readForm(){
+      //the content of your function will go here
+}
+    ```
 
   - Inside of the curly braces is where you will write all of your code for this function
 
@@ -24,7 +24,7 @@ Outside of the form, but still in the body, open the `script` tag with its `type
 
     `var myVariable = value;`
 
-    - Your first variable will hold all of the radio buttons.  You can do this by setting your variable equal to `document.getElementsByName("[name property value for the timezone buttons]")`
+    - Your first variable will be an array to hold all of the radio buttons.  You can do this by setting your variable equal to `document.getElementsByName("[name property value for the timezone buttons]")`.  To learn more about arrays, visit [this page](https://www.w3schools.com/js/js_arrays.asp) - w3schools is a really helpful resource that covers all the basics of any language.
       - For example, one of my input fields looks like this: `<input type="radio" id="est" name="tz" value="est">` and my variable looks like this: `var radioButtons = document.getElementsByName("tz");`
       - This line of code references the HTML page by using the `document` object and gathering all elements with the same value for the HTML `name` property.
     - Your second variable will hold the selected radio button's `value` - since the `value` property on the input field for the radio button is what made each button unique
@@ -36,11 +36,11 @@ Outside of the form, but still in the body, open the `script` tag with its `type
 
     - First, let's make a for loop - this is when we define a task to be completed a set number of times.  It's definition looks like this:
 
-      `for (var i = 0; i < radioButtons.length; i++){`
-
-      `tasks go here`
-
-      `}`
+      ```{js}
+  for (var i = 0; i < radioButtons.length; i++){
+        //tasks go here
+  }
+      ```
 
       where `i` is a variable that only exists for the scope of the for loop.  
 
@@ -52,11 +52,11 @@ Outside of the form, but still in the body, open the `script` tag with its `type
 
     - Now, to check if the button is selected, we will use an if statement.  These check a condition and return a boolean - true or false.  We can check the `checked` condition on each button using an if statement like this:
 
-      `if(radioButtons[i].checked == true){`
-
-      `actions go here`
-
-      `}`
+      ```{js}
+if (radioButtons[i].checked == true){
+        //actions go here
+}
+      ```
 
     - Since we want to check every radio button to see if it's been checked, place this if statment inside of your for loop.
 
@@ -79,7 +79,7 @@ Finally, you'll want to scroll up to your submit button
 
 Now, your page should print out the value of whichever item the user has selected when they click the submit button, like so:
 
-![Screen Shot 2021-01-31 at 8.29.18 PM](/Users/danielleanzelone/GitHub/BitCamp/Javascript/images/Screen Shot 2021-01-31 at 8.29.18 PM.png)
+![Screen Shot 2021-01-31 at 8.29.18 PM](../../images/Screen Shot 2021-01-31 at 8.29.18 PM.png)
 
 #### Open a pull request for your code
 
