--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -10,32 +10,27 @@ Finally, let's integrate the functions we wrote to produce a clock that changes 
 Now, scroll down to the function you wrote to find the selected timezone. 
 
 - Using either conditionals or a switch statement, change the offset based on the timezone selected.  
-  
+
   - For example, if your computer is set to eastern standard time and the user selected pacific standard time, then you would set the offset to 3.
-  
+
   - Using conditionals, you would just have a series of `if`  and `else if` statements that would check if your timezone variable is equal to a string that represents the `value` of each input field.  If the condition is satisfied, the offset would be assigned a new value
-  
+
   - You could also use a switch statement which would look something like this if you lived in the pacific timezone:
-  
-    `switch(timezone):`
-  
-    ​	`	case "cst":`
-  
-    ​		`offset = 2;`
-  
-    ​		`break;`
-  
-    ​	`case "est":`
-  
-    ​		`offset = 3;`
-  
-    ​		`break;`
-  
-    ​	`default:`
-  
-    ​		`offset = 0;`
-  
-    ​		`break;`
+
+    ```{javascript}
+      switch(timezone):
+        case "cst":
+        	offset = 2;
+        	break;
+        case "est":
+        	offset = 3;
+        	break;
+        default:
+        	offset = 0;
+        	break
+    ```
+
+  - You can learn more about switch statements [here](https://www.w3schools.com/js/js_switch.asp).
 
 Once you've set up your conditionals, revisit your function that sets your clock.  
 
@@ -43,7 +38,7 @@ Once you've set up your conditionals, revisit your function that sets your clock
 
 Finally, call the function that sets your clock at the end of your function that changes the timezone so that the time gets updated. Now, your clock should change when you select a timezone and hit submit.
 
-![week-1-final](/Users/danielleanzelone/GitHub/BitCamp/Javascript/images/Screen Shot 2021-01-31 at 8.31.52 PM.png)
+![week-1-final](../../images/Screen Shot 2021-01-31 at 8.31.52 PM.png)
 
 #### Open a pull request for your code
 
