--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -50,7 +50,7 @@ function readForm(){
 
     - Once `i` reaches the value set in the second portion of the for loops definition (`i < radioButtons.length`), the loop breaks and the compiler moves onto the code outside of the curly brackets.
 
-    - Now, to check if the button is selected, we will use an if statement.  These check a condition and return a boolean - true or false.  We can check the `checked` condition on each button using an if statement like this:
+    - Now, to check if the button is selected, we will use an if statement.  These check a condition and return a boolean - true or false - you can learn more about if statements [here](https://www.w3schools.com/js/js_if_else.asp).  We can check the `checked` condition on each button using an if statement like this:
 
       ```{js}
 if (radioButtons[i].checked == true){
