--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -13,9 +13,9 @@ Outside of the form, but still in the body, open the `script` tag with its `type
   - To define a function, type `function` followed by the name of your function, which must be unique and must be followed by parentheses and curly braces, like this:
 
     ```{js}
-function readForm(){
+    function readForm(){
       //the content of your function will go here
-}
+    }
     ```
 
   - Inside of the curly braces is where you will write all of your code for this function
@@ -36,13 +36,13 @@ function readForm(){
 
     - First, let's make a for loop - this is when we define a task to be completed a set number of times.  It's definition looks like this:
 
-      ```{js}
-  for (var i = 0; i < radioButtons.length; i++){
+      ```{javascript}
+      for (var i = 0; i < radioButtons.length; i++){
         //tasks go here
-  }
+      }
       ```
 
-      where `i` is a variable that only exists for the scope of the for loop.  
+     where `i` is a variable that only exists for the scope of the for loop.  
 
     - In this case, `i` starts at 0 and increases by 1 (`i++`) with every iteration of the loop until the loop reaches the length of the `radioButtons` array - 1 (`i < radioButtons.length`).  
 
@@ -52,10 +52,10 @@ function readForm(){
 
     - Now, to check if the button is selected, we will use an if statement.  These check a condition and return a boolean - true or false - you can learn more about if statements [here](https://www.w3schools.com/js/js_if_else.asp).  We can check the `checked` condition on each button using an if statement like this:
 
-      ```{js}
-if (radioButtons[i].checked == true){
+      ```{javascript}
+      if (radioButtons[i].checked == true){
         //actions go here
-}
+      }
       ```
 
     - Since we want to check every radio button to see if it's been checked, place this if statment inside of your for loop.
