--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -42,7 +42,7 @@ Finally, add a break and a `div` tag with a unique `id` right below the submit b
 
 By the end of this step, your page should look like this:
 
-![Screen Shot 2021-01-31 at 8.25.34 PM](../../images/Screen Shot 2021-01-31 at 8.25.34 PM.png)
+![Screen Shot 2021-01-31 at 8.25.34 PM](../../../images/commandprompt.png)
 
 #### Open a pull request for your code
 
