renaming images and fixing them

--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -79,7 +79,7 @@ Finally, you'll want to scroll up to your submit button
 
 Now, your page should print out the value of whichever item the user has selected when they click the submit button, like so:
 
-![Screen Shot 2021-01-31 at 8.29.18 PM](../../images/Screen Shot 2021-01-31 at 8.29.18 PM.png)
+![printing-tz-1-3](https://user-images.githubusercontent.com/32557138/106407858-15514e80-640b-11eb-9ffa-0782a722937d.png)
 
 #### Open a pull request for your code
 
