--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -38,7 +38,7 @@ Once you've set up your conditionals, revisit your function that sets your clock
 
 Finally, call the function that sets your clock at the end of your function that changes the timezone so that the time gets updated. Now, your clock should change when you select a timezone and hit submit.
 
-![week-1-final](../../images/Screen Shot 2021-01-31 at 8.31.52 PM.png)
+![week-1-final](https://user-images.githubusercontent.com/32557138/106408005-606b6180-640b-11eb-8cb3-8108d3c063f0.png)
 
 #### Open a pull request for your code
 
