--- a/Javascript/homework/responses/3.2-clock-styling.md
+++ b/Javascript/homework/responses/3.2-clock-styling.md
@@ -15,7 +15,7 @@ Once you've established your clock div, move to your `style.css` file and define
 
 If you load your HTML at this point, it should look something like this (give or take depending on what you've set your attributes to):
 
-![Screen Shot 2021-01-16 at 1.01.26 AM](../../images/Screen Shot 2021-01-16 at 1.01.26 AM.png)
+![clock-3-2-1](https://user-images.githubusercontent.com/32557138/106408577-b8569800-640c-11eb-82e6-6a917ce9b474.png)
 
 - Set the `border-radius` in the `.clock` section to 50% 
   - This will completely round the edges of the square, thus making it a circle. 
@@ -42,7 +42,7 @@ You'll also want to set the height and width to be a small square - I've set min
 
 These two steps move the small circle to the center of the clock. 
 
-If you load your page now, you'll notice that the small circle is slightly off center:![Screen Shot 2021-01-16 at 1.59.41 AM](../../images/Screen Shot 2021-01-16 at 1.59.41 AM.png)
+If you load your page now, you'll notice that the small circle is slightly off center:![clock-3-2-2](https://user-images.githubusercontent.com/32557138/106408655-d02e1c00-640c-11eb-98f0-b63262dbddd7.png)
 
 This is because the object is aligned with its position relative to the left and top sides, not its center.  To fix this, enter the following line into the `clock::after` block, below where you set the top and left positions:
 
@@ -50,7 +50,7 @@ This is because the object is aligned with its position relative to the left and
 
 This will translate the item 50% of its width to the left, and 50% of its width upwards.  Now your clock should look like this:
 
-![Screen Shot 2021-01-16 at 2.06.44 AM](../../images/Screen Shot 2021-01-16 at 2.06.44 AM.png)
+![clock-3-3-3](https://user-images.githubusercontent.com/32557138/106408705-ef2cae00-640c-11eb-87bf-7e3e1d9481ab.png)
 
 #### Open a pull request for your code
 
