--- a/Javascript/homework/responses/3.4-rotation.md
+++ b/Javascript/homework/responses/3.4-rotation.md
@@ -34,7 +34,7 @@ If you refresh your HTML page, you'll see there's no need to change anything for
 
 Now, your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 10.43.07 PM](../../images/Screen Shot 2021-01-16 at 10.43.07 PM.png)
+![numbers-3-4-1](https://user-images.githubusercontent.com/32557138/106408779-2307d380-640d-11eb-94b1-1cfd188aaa8c.png)
 
 *Don't forget to delete the border from `.clock .number` after this step if you included it earlier.*
 
