--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -23,9 +23,11 @@ We'll want all three of our hands to have some similar attributes, so in your cs
     ​		`.clock .hand { }`
 
 - Inside of this block, set the `bottom` and `left` attributes to `50%` 
-  - This places the hands at the center of the clock.  
-
+  
+- This places the hands at the center of the clock.  
+  
 - Set `position` to `absolute` 
+  
   - This anchors the hands to the clock.
 
 We'll change this later, but just so you get an idea of what we're doing, 
@@ -33,7 +35,7 @@ We'll change this later, but just so you get an idea of what we're doing,
 - Set your `height` and `width` to *some arbitrary values* and your `background color` to `black`.  
 - I set my height to 40% and my width to 10px and this is how my clock looks at this point in the code:
 
-![Screen Shot 2021-01-16 at 11.24.27 PM](../../images/Screen Shot 2021-01-16 at 11.24.27 PM.png)
+![hands-3-5-1](https://user-images.githubusercontent.com/32557138/106408826-39159400-640d-11eb-9805-743f857135ac.png)
 
 As you can see, the hand is slightly off center, which is the same issue we had earlier with the circle in the center of the clock.  Since we just want to move the hand to the left, we'll use the same trick as we did earlier, but this time the y-coordinate in the translate function will be 0, like so:
 
@@ -48,6 +50,7 @@ Now, let's style each hand to be unique.
 - To select the second hand, we'll define a selector:
 
   ​		`.clock .hand.second{ }`
+
   - Make sure to leave no space between `.hand` and `.second`, as this will be crucial to your definition.  
 
 - Repeat this process for the minute hand and the hour hand.
@@ -59,7 +62,7 @@ In each of these blocks,
 
 Now, your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 11.59.41 PM](../../images/Screen Shot 2021-01-16 at 11.59.41 PM.png)
+![hands-3-5-2](https://user-images.githubusercontent.com/32557138/106408862-4a5ea080-640d-11eb-8489-15db06b7e757.png)
 
 - Set the second hand's `z-index` attribute to 12
   - This makes sure that the second hand is always on top of the others
