--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -22,7 +22,7 @@ The `transform` line should now look like this:
 
 Now, if you set `--rotation` to 30 to test out this rotate tool, you'll see that the hand rotates with the center as its axis rather than its bottom end:
 
-![Screen Shot 2021-01-17 at 2.00.40 AM](../../images/Screen Shot 2021-01-17 at 2.00.40 AM.png)
+![rotating-hands-3-6-1](https://user-images.githubusercontent.com/32557138/106408905-62362480-640d-11eb-88cc-2555b188d116.png)
 
 To fix this, use the `transform-origin` attribute to change the position from which the hand is rotated to `bottom` like so:
 
@@ -30,7 +30,7 @@ To fix this, use the `transform-origin` attribute to change the position from wh
 
 Now, your clock should look like this:
 
-![Screen Shot 2021-01-17 at 2.04.43 AM](../../images/Screen Shot 2021-01-17 at 2.04.43 AM.png)
+![rotating-hands-3-6-2](https://user-images.githubusercontent.com/32557138/106408970-80038980-640d-11eb-88f3-600e175dd70d.png)
 
 Now that our hands are all set up, we can finally move onto the JavaScript portion of the code.
 
