--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -11,7 +11,7 @@ These two radio buttons should have the user input whether they'd like to see th
 
 After this step, your page should look like this:
 
-![Screen Shot 2021-01-17 at 9.31.52 PM](../../images/Screen Shot 2021-01-17 at 9.31.52 PM.png)
+![adding-buttons-4-2](https://user-images.githubusercontent.com/32557138/106409084-cb1d9c80-640d-11eb-913a-f1df504121ba.png)
 
 At this point, you can customize the appearance of these two radio buttons in your CSS file by defining a block that selects all items in your "view" class.  I suggest adding some margins and padding so that items don't look so crowded.
 
