--- a/Javascript/homework/responses/4.3-more-js-functions.md
+++ b/Javascript/homework/responses/4.3-more-js-functions.md
@@ -36,11 +36,11 @@ This is the same way we linked a function to the submit button, so feel free to 
 
 Now, if you click the "Analog" button, your screen should look like this:
 
-![Screen Shot 2021-01-17 at 10.55.15 PM](../../images/Screen Shot 2021-01-17 at 10.55.15 PM.png)
+![fixing-buttons-4-3-1](https://user-images.githubusercontent.com/32557138/106409173-f0aaa600-640d-11eb-8a88-c4645e5d13ce.png)
 
 And if you click the "Digital" button, it will look like this:
 
-![Screen Shot 2021-01-17 at 10.55.26 PM](../../images/Screen Shot 2021-01-17 at 10.55.26 PM.png)
+![fixing-buttons-4-3-2](https://user-images.githubusercontent.com/32557138/106409195-fe602b80-640d-11eb-8f91-349d364095c9.png)
 
 However, you may notice that when you first load your page, both clocks appear.  To fix this, add the `checked` attribute to the input field tag for the analog clock's radio button so that this button will be selected when the field loads.  Then, in your JavaScript file, call the `setAnalog()` function after it's defined.
 
