--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -4,7 +4,7 @@
 
 After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class.
 
-![Screen Shot 2021-01-15 at 5.49.29 PM](../../images/Screen Shot 2021-01-15 at 5.49.29 PM.png)
+![clock-selector](https://user-images.githubusercontent.com/32557138/106408305-39f9f600-640c-11eb-896d-f46a14259227.png)
 
 - Set a width and a height for the box that's going to hold your time  
 - Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
@@ -19,7 +19,7 @@ You may also want to adjust the margins of your clock so that theres some space 
 
 You can add as many bells and whistles to this clock that you please.  I increased the font-size here and added a box-shadow to add some depth to my clock.
 
-![Screen Shot 2021-01-15 at 6.17.26 PM](../../images/Screen Shot 2021-01-15 at 6.17.26 PM.png)
+![clock-color](https://user-images.githubusercontent.com/32557138/106408362-4b430280-640c-11eb-9247-75e983d93da1.png)
 
 The first number in each line represents the x-offset which is the horizontal distance from which you want the object to appear.  The second number is the y-offset - the vertical distance from which the box will appear.  The third number is the blur radius - a larger blur radius will create a bigger shadow and vice versa. 
 
