--- a/Javascript/homework/responses/3.1-integrating-code.md
+++ b/Javascript/homework/responses/3.1-integrating-code.md
@@ -12,7 +12,7 @@ You can also copy your HTML from last week, but make sure to remove the JavaScri
 
 If you've copied and filtered all your code correctly, this is what your page should look like:
 
-![Screen Shot 2021-01-15 at 8.11.26 PM](../../images/Screen Shot 2021-01-15 at 8.11.26 PM.png)
+![timezone-3-1](https://user-images.githubusercontent.com/32557138/106408477-88a79000-640c-11eb-8720-7aec540a9213.png)
 
 #### Open a pull request for your code
 
