--- a/Javascript/homework/responses/3.3-clock-digits.md
+++ b/Javascript/homework/responses/3.3-clock-digits.md
@@ -28,7 +28,7 @@ Now, the numbers will stay centered at the top of the clock, no matter the clock
 
 At this point your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 2.16.29 AM](../../images/Screen Shot 2021-01-16 at 2.16.29 AM.png)
+![numbers-3-3-1](https://user-images.githubusercontent.com/32557138/106408744-0b304f80-640d-11eb-8107-97c06f9dab8c.png)
 
 You'll notice that the numbers overlap in one spot and you can't read them.  In the next step we'll use rotation tools to change the positioning of each digit on the clock.
 
