--- a/Javascript/homework/responses/4.1-page-setup.md
+++ b/Javascript/homework/responses/4.1-page-setup.md
@@ -11,7 +11,7 @@
 
 Be sure to rename any repeating variables if necessary to get the function working.  Also, make sure to change the code you use to print the time to search for an element with `id="digital clock"`, so my line of code looks like `document.getElementById("digital clock").textContent = time;`. 
 
-At this point, your page should look something like this:![Screen Shot 2021-01-17 at 9.11.28 PM](../../images/Screen Shot 2021-01-17 at 9.11.28 PM.png)
+At this point, your page should look something like this:![start-4-1](https://user-images.githubusercontent.com/32557138/106409010-9a3d6780-640d-11eb-8f3d-3e80cd85dee5.png)
 
 - Add a selector in your css file that selects the `"digital"` class like so:
 
@@ -21,7 +21,7 @@ You may choose to style your digital clock differently this time, but if not, fe
 
 Your page should now look something like this:
 
-![Screen Shot 2021-01-17 at 9.18.06 PM](../../images/Screen Shot 2021-01-17 at 9.18.06 PM.png)
+![integrating-4-1](https://user-images.githubusercontent.com/32557138/106409044-b0e3be80-640d-11eb-9038-19ec4725d1f4.png)
 
 Feel free to size down the digital clock so that it doesn't mess up your layout when you resize your screen.
 
